Add workaround for erroneous warnings produced by gcc bug https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947